--- a/packages/ui/src/styles/index.css
+++ b/packages/ui/src/styles/index.css
@@ -1,3 +1,6 @@
+@unocss preflights;
+@unocss default;
+
 /* fairys_taro_enter_loading */
 @keyframes fairys_enter_loading_transform {
   0% {
@@ -324,7 +327,6 @@
     --fairys-enter-loading-transform-color: #00a98e;
   }
 }
-
 .fairys_taro_enter_loading {
   --fairys-enter-loading-transform-color: #00a98e;
   animation: fairys_enter_loading_transform 20s linear infinite;
@@ -415,12 +417,10 @@
   width: 20px;
   text-align: left;
 }
-
 .fairys_taro_enter_loading .loading-dots::after {
   content: '';
   animation: fairys_taro_enter_loading_dots 1.5s steps(4) infinite;
 }
-
 @keyframes fairys_taro_enter_loading_dots {
   0% {
     content: '';
