feat: 添加模糊查询组件

--- a/packages/simple-form/src/styles/index.css
+++ b/packages/simple-form/src/styles/index.css
@@ -1,3 +1,17 @@
 @import '@carefrees/form-utils-react-taro/assets/index.css';
+
 @unocss preflights;
 @unocss default;
+
+.nut-cell.fairys-taro-popup-search-list-virtual-cell > .nut-cell-left > .nut-cell-title {
+  width: 100%;
+}
+
+.nut-cell.fairys-taro-popup-search-list-virtual-cell > .nut-cell-extra {
+  flex: none;
+}
+
+.fairys-taro-popup-search-list-table .nut-table-main-head-tr {
+  z-index: 10;
+  position: relative;
+}
