--- a/packages/simple-form-ui/src/styles/index.css
+++ b/packages/simple-form-ui/src/styles/index.css
@@ -63,3 +63,18 @@
 .fairys-taro-valtio-form-layout.fairys-taro-form-layout-box-shadow {
   box-shadow: 0 6px 16px -8px #00000014, 0 9px 28px #0000000d, 0 12px 48px 16px #00000008;
 }
+
+.fairys-taro-valtio-form-layout + .fairys-taro-valtio-form-layout {
+  margin-top: 12px;
+}
+
+.fairys-taro-valtio-form-layout-last-item-no-border
+  > .fairys-taro-valtio-form-layout-body
+  > .fairys-taro-valtio-form-item:last-child,
+.fairys-taro-valtio-form-layout-last-item-no-border
+  > .fairys-taro-valtio-form-layout-body
+  > .fairys-taro-valtio-form-item:last-child
+  > .fairys-taro-valtio-form-item-container
+  > .fairys-taro-valtio-form-item-body {
+  border-bottom: 0px;
+}
