--- a/packages/valtio-form-basic/src/styles/index.css
+++ b/packages/valtio-form-basic/src/styles/index.css
@@ -19,11 +19,11 @@
   box-sizing: border-box;
 }
 
-.fairys-valtio-form-layout.fairys-form-layout-all-col-span {
+.fairys-valtio-form-layout.fairys-valtio-form-layout-all-col-span {
   grid-column: 1 / -1;
 }
 
-.fairys-valtio-form-layout.fairys-form-layout-box-shadow {
+.fairys-valtio-form-layout.fairys-valtio-form-layout-box-shadow {
   box-shadow: 0 6px 16px -8px #00000014, 0 9px 28px #0000000d, 0 12px 48px 16px #00000008;
 }
 
@@ -31,11 +31,17 @@
   margin-top: 12px;
 }
 
-.fairys-valtio-form-layout-last-item-no-border > .fairys-valtio-form-layout-body > .fairys-valtio-form-item:last-child,
+.fairys-valtio-form-layout-last-item-no-border
+  > .fairys-valtio-form-layout-body
+  > .fairys-valtio-form-item:last-child:not(.fairys-valtio-form-item-invalid-border-red),
 .fairys-valtio-form-layout-last-item-no-border
   > .fairys-valtio-form-layout-body
   > .fairys-valtio-form-item:last-child
   > .fairys-valtio-form-item-container
-  > .fairys-valtio-form-item-body {
+  > .fairys-valtio-form-item-body:not(.fairys-valtio-form-item-invalid-border-red) {
   border-bottom: 0px;
+}
+
+.fairys-valtio-form-item-invalid-border-red {
+  border-bottom-color: red !important;
 }
